alertmanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: kube-system
  annotations:
    prometheus.io/scrape: 'false'
  labels:
    app: alertmanager
spec:
  type: LoadBalancer 
  ports:
  - name: web
    port: 9093
    protocol: TCP
    targetPort: web 
  selector:
    app: alertmanager
